--- a/scss/Main.scss
+++ b/scss/Main.scss
@@ -236,3 +236,8 @@
     background-color: #252932;
   }
 }
+[contenteditable="false"]:empty:before {
+  content: attr(placeholder);
+  pointer-events: none;
+  display: block; /* For Firefox */
+}
