--- a/scss/Main.scss
+++ b/scss/Main.scss
@@ -53,14 +53,16 @@
 //Calculator
 
 .calculator {
+  position: relative;
   max-width: 19%;
   // width: 20%;
   margin-top: 10vh;
   margin-left: 40vh;
-  height: 65vh;
+  height: 68vh;
   background-color: $darkcolor;
   border-radius: 33px;
   box-shadow: 9px 10px 29px rgba(0, 0, 0, 0.4);
+  overflow: hidden;
   // justify-content: center;
 }
 
@@ -100,9 +102,45 @@
 }
 
 .result {
-  font-size: 3.5rem;
+  font-size: 3.3rem;
   @include productSansRegular;
   height: 8vh;
+}
+
+.hidden {
+  visibility: hidden;
+}
+
+//Expression history view
+.history-view {
+  position: absolute;
+  width: 100%;
+  height: 28%;
+  overflow-y: scroll;
+}
+
+// .hidden{
+//   display: hidden;
+//   visibility: hidden;
+// }
+
+.history-row {
+  background-color: $darkcolor;
+  color: rgb(172, 172, 172);
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  padding-left: 2rem;
+  font-size: 1rem;
+}
+
+.history-row span:nth-child(1) {
+  color: white;
+}
+
+.history-row span:nth-child(3) {
+  color: $accentColor;
+  font-weight: bold;
+  font-size: 1.2rem;
 }
 
 //Calculator keys
@@ -236,8 +274,9 @@
     background-color: #252932;
   }
 }
+//placeholder
 [contenteditable="false"]:empty:before {
   content: attr(placeholder);
   pointer-events: none;
-  display: block; /* For Firefox */
+  display: block;
 }
